k8s/overlays/staging/env.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
spec:
  template:
    spec:
      containers:
        - name: django
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  template:
    spec:
      containers:
        - name: postgres
