k8s/overlays/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 100m
spec:
  rules:
    - host: reves-pprd.sciencespo.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: django
              servicePort: 8000
